--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="bootstrap.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
     <title>Workshop</title>
 </head>
@@ -64,6 +63,7 @@
                             <th scope="col">Nome</th>
                             <th scope="col">CPF</th>
                             <th scope="col">Sexo</th>
+                            <th scope="col">Deletar</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -72,12 +72,18 @@
                             <td>Pedro Neves de Oliveira</td>
                             <td>408.157.448-03</td>
                             <td>Masculino</td>
+                            <td>
+                                <button type="button" class="btn btn-danger">Excluir</button>
+                            </td>
                         </tr>
                         <tr>
                             <th scope="row">2</th>
                             <td>Pedro Neves de Oliveira</td>
                             <td>408.157.448-03</td>
                             <td>Masculino</td>
+                            <td>
+                                <button type="button" class="btn btn-danger">Excluir</button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -86,9 +92,7 @@
         </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="bootstrap.js"></script>
 
     <script src="main.js"></script>
 </body>
